<?xml version="1.0"?>
<package format="2">
  <name>sick_visionary_ros</name>
  <version>1.0.0</version>
  <description>Open source drivers for the SICK Visionary-S 3D camera and Visionary-T Mini 3D-ToF camera.</description>

  <license>Unlicense</license>

  <maintainer email="techsupport3dsnapshot@sick.de">SICK AG TechSupport 3D Snapshot</maintainer>
  <author email="techsupport3dsnapshot@sick.de">SICK AG TechSupport 3D Snapshot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>sensor_msgs</depend>

</package>
